[gd_scene load_steps=6 format=3 uid="uid://klkhuhsk6xgn"]

[ext_resource type="Script" uid="uid://bl75glwp83u04" path="res://scenes/hp_bar.gd" id="1_e8frx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wwmsb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8frx"]
bg_color = Color(0.6666667, 0.050980393, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6ww1"]
bg_color = Color(0.16206557, 0.1620656, 0.16206548, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27450982)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bv7e"]
bg_color = Color(1, 1, 1, 1)

[node name="HPBar" type="ProgressBar"]
z_index = 1
offset_right = 300.0
offset_bottom = 10.0
theme_override_styles/background = SubResource("StyleBoxEmpty_wwmsb")
theme_override_styles/fill = SubResource("StyleBoxFlat_e8frx")
value = 50.0
show_percentage = false
script = ExtResource("1_e8frx")
color = Color(0.17366049, 0.4140821, 0.18919456, 1)

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_l6ww1")
theme_override_styles/fill = SubResource("StyleBoxFlat_6bv7e")
value = 80.0
show_percentage = false

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
